Add a delta endpoint listening to adms:identifier

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.2",
   "description": "Microservice reconciliating duplicate person data based on a unique person identifier.",
   "dependencies": {
-    "@lblod/mu-auth-sudo": "^0.2.0"
+    "@lblod/mu-auth-sudo": "^0.2.0",
+    "body-parser": "^1.19.0",
+    "lodash.flatten": "^4.4.0"
   },
   "devDependencies": {},
   "scripts": {
