--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@lblod/mu-auth-sudo": "^0.2.0",
     "body-parser": "^1.19.0",
-    "lodash.flatten": "^4.4.0"
+    "cron": "^1.8.2",
+    "lodash.flatten": "^4.4.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
